<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">medical care</string>

    <string name="next">CONTINUE</string>
    <string name="ps_title">SELF-HELP MODEL</string>
    <string name="ps_content">PASSWORD</string>
    <string name="engineer_mode">ENGINEER MODE</string>
    <string name="count_cleaning">COUNT CLEANING</string>
    <string name="cleaning">CLEANING</string>
    <string name="remote_control">REMOTE CONTROL</string>
    <string name="on_str">ON</string>
    <string name="off_str">OFF</string>
    <string name="quantity">QUANTITY</string>
    <string name="of_hand_tools">HAND TOOLS</string>
    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="left_hand_tool">LEFT HAND TOOL</string>
    <string name="qb_6_10">QB-6-10</string>
    <string name="qb_6_16">QB-6-16</string>
    <string name="qb_6_20">QB-6-20</string>
    <string name="qb_2_10">QB-2-10</string>
    <string name="qb_2_16">QB-2-16</string>
    <string name="qb_2_24">QB-2-24</string>
    <string name="qb_4_24">QB-4-24</string>
    <string name="qb_star_30">QB-*-30</string>
    <string name="qb_6_200">QB-6-200</string>
    <string name="qb_6_40">QB-6-40</string>

    <string name="right_hand_tool">RIGHT HAND TOOL</string>
    <string name="power_supply_type">POWER SUPPLY TYPE</string>
    <string name="minute">MINUTE</string>
    <string name="ok">OK</string>
    <string name="new_user">NEW USER</string>
    <string name="id">ID</string>
    <string name="name">NAME</string>
    <string name="gender">Gender</string>
    <string name="man">MAN</string>
    <string name="woman">WOMAN</string>
    <string name="age">AGE</string>
    <string name="tel">TEL</string>
    <string name="stcrage">STORAGE</string>
    <string name="user_lookup">USER LOOKUP</string>
    <string name="please_enter">Please enter your mobile number</string>
    <string name="search_hint">TARGET NOT FOUND,PLEASE RE-ENTER!</string>
    <string name="lookup">LOOKUP</string>
    <string name="free_users">FREE USERS</string>
    <string name="no_fatent">NO PATIENT TREATMENT INFORMATION CAN BE STORED IN FREE MODE!</string>
    <string name="get_info">GET INFO</string>
    <string name="user_list">USER LIST</string>
    <string name="usage_record">USAGE RECORD</string>
    <string name="delete">DELETE</string>
    <string name="temperature_alarm">TEMPERATURE ALARM</string>
    <string name="handle">HANDLE</string>
    <string name="count_clearing">COUNT CLEARING</string>
    <string name="upper">UPPER</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="limit">LIMIT</string>
    <string name="lower_limit">LOWER LIMIT</string>
    <string name="of">OF</string>
    <string name="water_flow">WATER FLOW</string>
    <string name="tips">Tips</string>
    <string name="cancel">cancel</string>
    <string name="sure">sure</string>
    <string name="tv_next">NEXT</string>
    <string name="trio">EXACT</string>
    <string name="fluence">FLUENCE</string>
    <string name="frequency">FREQUENCY</string>
    <string name="time">TIME</string>
    <string name="sec">Sec</string>
    <string name="grid_size">GRID SIZE</string>
    <string name="energy">ENERGY</string>
    <string name="ps_error">Password error</string>
    <string name="user_information">Successfully recorded user information!</string>
    <string name="user_created">User created successfully!</string>
    <string name="user_delete_record">Are you sure to delete this record?</string>
    <string name="port_error">Port open failed</string>
    <string name="short_board">Foot or hand switch failure, please check!</string>
    <string name="hand_error">Failed to connect the treatment tool！</string>
    <string name="temperature_high">High water temperature alarm！</string>
    <string name="temperature_low">Low water temperature alarm！</string>
    <string name="water_low">Low water flow alarm！</string>
    <string name="water_no">No low flow alarm！</string>
    <string name="netwrok_no">There is no network at present! </string>
    <string name="setting_succeeded">Setting succeeded!</string>
    <string name="setting_failed">Setting failed!</string>
    <string name="switching_languages">Switching languages requires restart</string>
    <string name="user_delete">Are you sure you want to delete this user?</string>
    <string name="tel_no_hint">Mobile number is empty ?</string>
    <string name="select_body">Please select a body part!</string>
    <string name="work_no">Work not started!</string>
    <string name="event">EVENT</string>
    <string name="mode">MODE</string>
    <string name="send_fail">fail in send</string>
    <string name="ends_time">Self hair removal time ends</string>
    <string name="skin">SKIN</string>
    <string name="body">BODY</string>
    <string name="work_count">WORKCOUNT</string>
    <string name="name_cannot">User name cannot be empty! </string>
    <string name="phone_cannot">Mobile phone number cannot be empty!</string>
    <string name="phone_already">Mobile number already exists!</string>
    <string name="trio_3d">QUATTRO 3D</string>
    <string name="select">SELECT</string>
    <string name="burst">BURST</string>
    <string name="total">TOTAL</string>
    <string name="current">CURRENT</string>
    <string name="stby">STBY</string>
    <string name="ready">READY</string>
    <string name="working">WORKING</string>
    <string name="auto_shed_time">Time Remaining：</string>
    <string name="disconnect_tips">Communication with the control system is abnormal. Contact the manufacturer!</string>
    <string name="phone_count"> Mobile phone number should be less than 13 digits !</string>


    <string name="lock_tips">This device has been banned！</string>
    <string name="days_remaining">Days remaining</string>
    <string name="hours_remaining">Hours remaining</string>
    <string name="count_remaining">Remaining times</string>
    <string name="no_network">No network, please reconnect to the available network!</string>
    <string name="network_connection_exception">Network Connection Exception！</string>

    <string name="system_setting"> System setup is complete!</string>
    <string name="name_count">Name length should be less than 20 characters !</string>


    <string name="frequency_hz">FREQUENCY</string>

    <string name="thematic_style">THEMATIC STYLE</string>
    <string name="mode_two_bg_1">STYLE   I</string>
    <string name="mode_two_bg_2">STYLE   II</string>
    <string name="mode_two_bg_3">STYLE   III</string>
    <string name="mode_two_bg_4">STYLE   IV</string>
    <string name="mode_two_bg_5">STYLE   V</string>
    <string name="mode_two_bg_6">STYLE   VI</string>
    <string name="user_down">USER  DATA DOWNLOAD</string>
    <string name="mode_select">OPERATION MODE SELECTION</string>
    <string name="mode_select_1">I</string>
    <string name="mode_select_2">II</string>
    <string name="wlan_select">WLAN</string>
    <string name="background_select">OPERATION BACKGROUND SELECTION</string>
    <string name="background_select_1">I</string>
    <string name="background_select_2">II</string>
    <string name="background_select_3">III</string>
    <string name="background_select_4">IV</string>
    <string name="bluetooth_select">BLUETOOTH</string>
    <string name="upper_str">UPPER</string>
    <string name="lower_str">LOWER</string>
    <string name="enger_str">ENERGY</string>
    <string name="limit_str">LIMIT</string>
    <string name="version_code">VERSION</string>
    <string name="expert_str">EXPERT</string>
    <string name="smart_str">SMART</string>

    <string name="skin_tyoe">Skin Type</string>
    <string name="skin_1">I</string>
    <string name="skin_2">II</string>
    <string name="skin_3">III</string>
    <string name="skin_4">IV</string>
    <string name="skin_5">V</string>
    <string name="skin_6">VI</string>
    <string name="skin_location">Location</string>

    <string name="tv_mode_one_ok">Ok</string>
    <string name="tv_mode_one_cancel">Cancel</string>
    <string name="tv_work_one_temperature">Temperature</string>
    <string name="tv_work_one_flow">Flow</string>
    <string name="tv_work_one_totla">Total</string>
    <string name="tv_work_one_current">Current</string>
    <string name="tv_work_one_id">ID</string>
    <string name="tv_work_one_exact">EXACT</string>
    <string name="tv_work_one_raedy">Ready</string>
    <string name="tv_work_one_auto">AUTO</string>
    <string name="tv_work_one_30">30</string>
    <string name="tv_work_one_100">100</string>
    <string name="tv_work_one_400">400</string>
    <string name="tv_work_one_l">L</string>
    <string name="tv_work_one_f">F</string>
    <string name="tv_work_one_m">M</string>
    <string name="tv_work_one_rate">Rate</string>
    <string name="tv_work_one_hz">Hz</string>
    <string name="tv_work_one_fluence">Fluence</string>
    <string name="tv_work_one_j">J</string>
    <string name="select_skin">Please select a skin part!</string>
    <string name="tv_work_two_l">Slow</string>
    <string name="tv_work_two_f">Fast</string>
    <string name="tv_work_two_m">Med</string>

    <string name="tv_work_three_pulse">Pulse（MS）</string>
    <string name="tv_work_three_fluence">Fluence（J）</string>
    <string name="tv_work_three_rate">Rate（Hz）</string>
    <string name="tv_work_six_rate">Rate</string>
    <string name="tv_work_six_fluence">Fluence</string>

    <string name="excel_success"> Export successful </string>
    <string name="excel_fail"> Export failed </string>
    <string name="excel_no_data"> There is currently no data available </string>

    <string name="wifi_open">WiFi ON</string>
    <string name="wifi_close">WiFi OFF</string>
    <string name="wifi_no_close"> WiFi cannot be turned off </string>

    <string name="replace_filter"> Please replace the filter device！</string>
    <string name="splash_tips">  Establishing connection, please click to enter later！</string>
    <string name="mode_one_man_forehead">forehead</string>
    <string name="mode_one_man_cheek">cheek</string>
    <string name="mode_one_man_lip">lip</string>
    <string name="mode_one_man_neck">neck</string>
    <string name="mode_one_man_chest">chest</string>
    <string name="mode_one_man_abdomen">abdomen</string>
    <string name="mode_one_man_bikini">Bikini</string>
    <string name="mode_one_man_thigh">thigh</string>
    <string name="mode_one_man_knee">knee</string>
    <string name="mode_one_man_leg">leg</string>
    <string name="mode_one_man_armpit">armpit</string>
    <string name="mode_one_woman_arm">arm</string>
    <string name="mode_one_man_hand">hand</string>
    <string name="mode_one_man_nape">nape</string>
    <string name="mode_one_man_back">back</string>
    <string name="mode_one_man_buttocks">Buttocks</string>
    <string name="mode_one_man_shoulder">shoulder</string>
    <string name="mode_two_people_face">face</string>
    <string name="mode_two_people_four_limbs">the four limbs</string>
    <string name="mode_two_people_armpit">armpit</string>
    <string name="mode_two_people_abdomen">abdomen</string>
    <string name="mode_two_people_back">back</string>
    <string name="mode_two_people_bikini">Bikini</string>
    <string name="mode_shr_stack">SHR STACK</string>
    <string name="mode_shr">SHR</string>
    <string name="mode_hr">HR</string>





</resources>
