<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/myBgColor"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.UserCreateActivity">

    <com.ss.apidemo.view.MergerStatus
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/ic_back" />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/new_user"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/engineer_bt_rounded_corners"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name" />

                    <EditText
                        android:imeOptions="flagNoExtractUi|actionDone"
                        android:textColor="@color/white"
                        android:id="@+id/et_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:lines="1"
                        android:inputType="text"
                        android:background="@drawable/shed_bt_rounded_corners"
                        android:paddingLeft="10dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@color/white"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gender" />

                    <RadioGroup
                        android:id="@+id/rg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <RadioButton
                            android:drawablePadding="10dp"

                            android:id="@+id/rd_man"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/radio_button_selector"
                            android:button="@null"
                            android:text="@string/man"
                            android:textColor="@color/white"></RadioButton>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <RadioButton
                            android:drawablePadding="10dp"
                            android:id="@+id/rd_woman"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/radio_button_selector"
                            android:button="@null"
                            android:text="@string/woman"
                            android:textColor="@color/white"></RadioButton>
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@color/white"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/age" />

                    <EditText
                        android:textColor="@color/white"
                        android:imeOptions="flagNoExtractUi|actionDone"
                        android:id="@+id/et_age"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@drawable/shed_bt_rounded_corners"
                        android:inputType="number"
                        android:lines="1"
                        android:paddingLeft="10dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@color/white"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tel" />

                    <EditText
                        android:imeOptions="flagNoExtractUi|actionDone"
                        android:textColor="@color/white"
                        android:id="@+id/et_tel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@drawable/shed_bt_rounded_corners"
                        android:inputType="number"
                        android:lines="1"
                        android:paddingLeft="10dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@color/white"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""/>

                    <EditText
                        android:imeOptions="flagNoExtractUi|actionDone"
                        android:textColor="@color/white"
                        android:id="@+id/et_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:lines="1"
                        android:background="@drawable/shed_bt_rounded_corners"
                        android:paddingLeft="10dp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:textColor="@color/white"
                android:id="@+id/tv_create"
                android:layout_marginTop="20dp"
                android:background="@drawable/engineer_bt_rounded_corners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stcrage"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/user_lookup"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/engineer_bt_rounded_corners"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@color/white"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tel" />

                    <EditText
                        android:imeOptions="flagNoExtractUi|actionDone"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:id="@+id/et_search"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="@drawable/shed_bt_rounded_corners"
                        android:paddingLeft="10dp"
                        android:lines="1"
                        android:inputType="number"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:hint="@string/please_enter" />
                </LinearLayout>

                <LinearLayout
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:visibility="invisible"
                        android:id="@+id/tv_search_hint"
                        android:textColor="@color/white"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/search_hint" />

                </LinearLayout>

                <LinearLayout
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:textColor="@color/white"
                android:id="@+id/tv_search"
                android:layout_marginTop="20dp"
                android:background="@drawable/engineer_bt_rounded_corners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lookup"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/free_users"
                android:textSize="30sp" />

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/engineer_bt_rounded_corners"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/no_fatent" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_free"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:background="@drawable/engineer_bt_rounded_corners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_info"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>