<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    android:layout_width="wrap_content"
    android:layout_height="90dp">

    <ImageView
        android:layout_marginLeft="10dp"
        android:id="@+id/iv_gender"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_man" />

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:visibility="gone"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/bt_gray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/id" />

            <TextView
                android:textColor="@color/bt_gray"
                android:id="@+id/tv_user_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:lines="1"
                android:text="1111" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/bt_gray"
                android:singleLine="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name" />

            <TextView
                android:textColor="@color/bt_gray"
                android:id="@+id/tv_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:lines="1"
                android:text="1111" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/bt_gray"
                android:singleLine="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tel" />

            <TextView
                android:textColor="@color/bt_gray"
                android:id="@+id/tv_user_tel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:lines="1"
                android:text="12700001111" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>